security: add cargo-audit to CI, fix supply chain risks
- Add security audit job to GitHub Actions CI using cargo-audit
- Remove local path dependency on wasm-bindgen-lite, use published npm version ^0.3.2
- Create comprehensive CONTRIBUTING.md with development setup and guidelines
- Fix version drift: update workspace Cargo.toml from 0.1.0 to 0.2.4 to match NPM package

This addresses the critical open source readiness issues:
- Security vulnerabilities now checked automatically in CI
- Supply chain attacks mitigated by using published dependencies
- Contributors have clear development setup instructions
- Version consistency maintained across Rust crates and NPM package

All changes tested and builds working correctly.

--- a/js/package/package.json
+++ b/js/package/package.json
@@ -82,7 +82,7 @@
     "@types/node": "^20.0.0",
     "esbuild": "^0.27.0",
     "typescript": "^5.0.0",
-    "wasm-bindgen-lite": "file:../../../wasm-bindgen-lite"
+    "wasm-bindgen-lite": "^0.3.2"
   },
   "dependencies": {
     "wasm-feature-detect": "^1.5.0"
