--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -150,7 +150,7 @@ jobs:
       - name: Run security audit
         run: |
           cargo generate-lockfile
-          cargo audit --deny warnings
+          cargo audit --deny warnings --ignore RUSTSEC-2024-0436
 
   bundle-size:
     name: Bundle Size Check
